added Dockerfile